#48 - Fix Success/Error messages alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -210,3 +210,12 @@ ul#registrations_container { margin: 0!important;}
 .add_edit_page_header_margin {
   margin: 0 0 12px -19px !important;
 }
+
+#message-container {
+  margin-left: -10px;
+  min-width: 89.5em;
+}
+
+.alert-danger {
+  margin-left: 37px;
+}
